--- a/pom.xml
+++ b/pom.xml
@@ -55,19 +55,22 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.6.0</version>
+            <!--<version>5.6.0</version>-->
+            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.6.0</version>
+            <version>5.8.2</version>
+            <!--<version>5.6.0</version>-->
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.6.0</version>
+            <version>5.8.2</version>
+            <!--<version>5.6.0</version>-->
             <scope>test</scope>
         </dependency>
         
@@ -79,6 +82,21 @@
             <groupId>com.github.vincentrussell</groupId>
             <artifactId>sql-to-mongo-db-query-converter</artifactId>
             <version>1.21</version>
+        </dependency>
+        
+        <!--
+           Generador dimamico de  clases     Java
+        -->                
+        <dependency>
+  <groupId>net.bytebuddy</groupId>
+  <artifactId>byte-buddy</artifactId>
+  <version>1.12.8</version>
+</dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile.config</groupId>
+            <artifactId>microprofile-config-api</artifactId>
+            <version>3.0.1</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
