--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
             <version>3.0.1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-core</artifactId>
+            <version>4.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
